Add controller integration tests and fix test project references
- Add GrowDate.Api project reference to test project
- Add Microsoft.AspNetCore.Mvc.Core NuGet dependency
- Create comprehensive controller integration tests:
  - RecommendationsControllerTests (5 tests)
  - CropsControllerTests (7 tests)
  - RegionsControllerTests (6 tests)
- All 30 tests passing (11 existing unit + 19 new integration)

--- a/src/GrowDate.Tests/GrowDate.Tests.csproj
+++ b/src/GrowDate.Tests/GrowDate.Tests.csproj
@@ -17,9 +17,11 @@
     </PackageReference>
     <PackageReference Include="Moq" Version="4.20.70" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\GrowDate.Api\GrowDate.Api.csproj" />
     <ProjectReference Include="..\GrowDate.Core\GrowDate.Core.csproj" />
     <ProjectReference Include="..\GrowDate.Infrastructure\GrowDate.Infrastructure.csproj" />
   </ItemGroup>
