Fix interactive map button functionality and improve user journey
- Fixed Load Interactive Map button JavaScript integration with Blazor
- Resolved duplicate OnRegionSelected method conflicts
- Updated JavaScript to properly communicate with Blazor components
- Fixed API port configuration (API: 5102, Frontend: 5000)
- Improved region selection flow between map and list views
- Added proper error handling and logging for map interactions
- Updated deployment configurations for better reliability

--- a/src/GrowDate.Frontend/Dockerfile
+++ b/src/GrowDate.Frontend/Dockerfile
@@ -20,6 +20,7 @@ RUN dotnet publish "GrowDate.Frontend.csproj" -c Release -o /app/publish /p:UseA
 # Runtime stage - using nginx to serve the static files
 FROM nginx:alpine AS final
 WORKDIR /usr/share/nginx/html
+# wget is already available in nginx:alpine for health checks
 COPY --from=publish /app/publish/wwwroot .
 COPY src/GrowDate.Frontend/nginx.conf /etc/nginx/nginx.conf
 EXPOSE 80
