--- a/src/GrowDate.Frontend/nginx.old.conf
+++ b/src/GrowDate.Frontend/nginx.old.conf
@@ -17,10 +17,10 @@ http {
         root /usr/share/nginx/html;
         index index.html;
 
-        # Security headers
-        add_header X-Frame-Options "SAMEORIGIN" always;
-        add_header X-Content-Type-Options "nosniff" always;
-        add_header X-XSS-Protection "1; mode=block" always;
+        # Enable CORS for API calls
+        add_header Access-Control-Allow-Origin *;
+        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS";
+        add_header Access-Control-Allow-Headers "Content-Type, Authorization";
 
         location / {
             try_files $uri $uri/ /index.html =404;
@@ -29,24 +29,14 @@ http {
         # Proper MIME types for Blazor files
         location ~ \.wasm$ {
             types { application/wasm wasm; }
-            expires 1y;
-            add_header Cache-Control "public, immutable";
         }
 
         location ~ \.dll$ {
             types { application/octet-stream dll; }
-            expires 1y;
-            add_header Cache-Control "public, immutable";
         }
 
         location ~ \.json$ {
             types { application/json json; }
-        }
-
-        # Cache static assets
-        location ~* \.(css|js|ico|svg|png|jpg|jpeg|gif|woff|woff2|ttf|eot)$ {
-            expires 1y;
-            add_header Cache-Control "public, immutable";
         }
     }
 }
