--- a/docker-compose.old.yml
+++ b/docker-compose.old.yml
@@ -31,7 +31,7 @@ services:
       - growdate-network
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://127.0.0.1/"]
+      test: [\"CMD\", \"wget\", \"--no-verbose\", \"--tries=1\", \"--spider\", \"http://127.0.0.1/\"]
       interval: 30s
       timeout: 10s
       retries: 3
