--- a/src/GrowDate.Api/Dockerfile
+++ b/src/GrowDate.Api/Dockerfile
@@ -24,5 +24,6 @@ FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS final
 WORKDIR /app
 EXPOSE 5100
 ENV ASPNETCORE_URLS=http://+:5100
+RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
 COPY --from=publish /app/publish .
 ENTRYPOINT ["dotnet", "GrowDate.Api.dll"]
